--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body style="background-color: #FE2E64;">
+
 
 <div class="name">
 
@@ -14,78 +15,69 @@
 </div>
 
 <div class="sidebar">
-  <a href="portfolio.html">portfolio</a>
   <a href="links.html">links</a>
-  <a href="info.html">about</a>
   <a href="explore.html">explore</a>
   <a href="cv.html">resume</a>
+  <a href="portfolio.html">portfolio</a>
+    <a href="info.html">about</a>
   <a href="index.html">home sweet home</a>
 
     </div>
 
-    <div class="content" style="top: 150px;">
+    <div class="content" style="top: 150px; text-align:center; color:white;">
 
-<p style="text-align: center;"> S K I L L S </p> <br> <br>
-Adobe Creative Suite [Photoshop, Illustrator, InDesign, Premier, Dimension], Digital Graphics, Videography, Video editing, Project coordination, Creative design, Process & experiment oriented design practice, Photography, Conceptual thinker, Book design [binding, paper stock, Printing processes, formatting documents], Quick learner, Client communication, Photo editing, Resourceful, Research, Art conceptualization, Knowledge of fine arts [painting, illustration, craft/materiality], motion graphics and animation, Knowledge of typography, web design <br> <br>
+<p style="text-align: center; "> S K I L L S </p> <br> <br>
+Adobe Creative Suite <br> [Photoshop, <br> Illustrator, <br> InDesign, <br> Premier, <br> Dimension], <br> producing digital graphics, <br> videography, <br> video editing, <br> project coordination, <br> process & experiment oriented design practice, <br> photography, <br> conceptual thinker, <br> book design, <br> book binding, <br> printing processes, <br> formatting documents, <br> quick learner, <br> client communication, <br> photo editing, <br> resourceful, <br> research, <br>
+frame animation, <br> knowledge of art and design history, <br> painting, <br> typography, <br> web design <br> illustration <br> <br> <br> <br>
 <p style="text-align: center;"> E D U C A T I O N </p> <br> <br>
-Virginia Commonwealth University of Richmond, VA <br> Currently pursuing BFA in Graphic Design 2021 <br> Dean’s List honoree fall 2017 <br>
-Dean’s List honoree fall 2018 <br>
+Virginia Commonwealth University of Richmond, VA 2017-2021 <br> Currently pursuing BFA in Graphic Design <br>
+Dean’s List honoree [2017-2020] <br>
 Cindy Neuschwander/1708 Gallery scholarship recipient fall 2017 <br>
-Virginia Commonwealth University merit scholarship recipient fall 2017-spring 2020 <br> <br>
-Patrick Henry High School of Ashland, VA <br>
-High School Advanced Diploma 2017<br>
-Vice president of Patrick Henry International Thespian Society troupe <br> National Art Honor Society member <br>
-Excellence in Fine Art recipient upon graduation <br>
-Hanover Scholar recipient <br>
-Ranked in Top 10% of class <br> <br>
+Virginia Commonwealth University merit scholarship recipient fall 2017-fall 2020 <br> <br> <br> <br>
+
 <p style="text-align: center;"> E X P E R I E N C E </p> <br> <br>
-Freelance graphic designer at Read to Them, a Richmond-based nonprofit <br>
+Freelance Graphic Designer at Read to Them <br>
 October 2019 to present <br>
-Work within brand identity,designing printed materials, video editing, illustration, film/production, photography, poster design, calendar design, web design.
+Work within brand identity, <br> designing printed materials, <br> video editing,  <br> illustration,  <br> film/production,  <br> photography,  <br> poster design,  <br> calendar design,  <br> web design  <br> social media  <br>
 <br><br>
-Freelance/commissioned painter <br>
-Ongoing <br>
-Commissioned to paint primarily portraits, as well as pet portraits
+Freelance/commissioned portrait painter <br> <br> <br>
+
+Freelance designer for Sigmund Fraud house show poster <br>
+January 2020
+<br>
+
 <br><br>
 Muralist for Mike Baudhuin of Culpeper, Virginia <br> December 2018 to July 2019 <br>
-Designed and painted 200 sq ft. ceiling mural,
-Created rough sketches and designed unique characters and scenes to appear in a mural,
-Used scaffolding safely, organized and implemented mural,
-Generated high quality results in a timely manner,
-Met with commission clients to discuss artistic preferences and ideas,
-Contributed ideas during strategic and conceptual brainstorming sessions
-<br><br>
-Camera operator for upcoming documentary regarding Lamb of God’s Westboro Baptist Church protest by Don Argott <br> March 2019 <br>
-Operated camera/equipment in a congested/crowded setting,
+designed and painted 200 sq ft. ceiling mural, <br>
+used scaffolding safely, <br> organized and implemented mural, <br>
+generated high quality results in a timely manner, <br>
+met with commission clients to discuss artistic preferences and ideas, <br>
+contributed ideas during strategic and conceptual brainstorming sessions
+<br><br> <br>
+
+Camera operator for upcoming documentary by Dan Argot <br> March 2019 <br>
+Operated camera/equipment in a congested/crowded protest setting,
 Moved around crowd & acquired a number of angles and perspectives,
 Filmed interviews with Randy Blythe [of Lamb of God] as well as member of WBC <br>
-<br>
-Film/Production for short film "Killer of Women" <br> August 2018 to Auguest 2019 <br>
-Contributed ideas during strategic and conceptual brainstorming sessions,
-Assisted in screenwriting & storyboarding process,
-Developing schedules and orchestrating shoots,
-Production design and props,
-Provided creative feedback throughout the filming process,
-Sound design/foley
 <br> <br>
-Freelance Graphic Designer for Tidal Front band of Richmond, Virginia <br> January 2019 to present <br>
-Creating album art and identity for a local band,
-Used skill in Adobe Illustrator to create images and layouts,
-Finalized projects with touches such as adjusting image sizes and selecting fonts,
-Worked with customers to present mockups and collect information for adjustments
+Film Worker for short film "Killer of Women" <br> August 2018 to Auguest 2019 <br>
+contributed ideas during strategic and conceptual brainstorming sessions,
+assisted in screenwriting & storyboarding process,
+developing schedules and orchestrating shoots,
+production design and props,
+provided creative feedback throughout the filming process,
+sound design/foley
+<br> <br> <br>
+Freelance Graphic Designer for Tidal Front band of Richmond, Virginia <br> January 2019 <br>
+created album art and identity for a local band, <br>
+used skill in Adobe Illustrator to create images and layouts, <br>
 <br><br>
 Freelance Graphic Designer for Mike Baudhuin of Culpeper, Virginia <br>July 2018 to September 2018 <br>
-Created a wine label for client, Illustrated content for wine label to suit client’s intended image/identity,
-Used skill in Adobe Photoshop and Adobe Illustrator to create images and layouts,
-Finalized projects with touches such as adjusting image sizes and selecting fonts,
-Worked with customers to present mockups and collect information for adjustments,
-Generated digital image files for use in digital and traditional printing methods, Utilized knowledge of production to create high quality images,
-Met with commission clients to discuss artistic preferences and ideas  <br> <br>
-
-<p style="text-align: center;"> G O A L S </p> <br><br>
-Working to create conceptual design and film <br> <br> Producing high quality work in a friendly, collaborative atmosphere <br> <br> Connecting to people with engaging and enriching creative works
-
-
+created a wine label for client, <br> illustrated content that meshed with client’s image/identity, <br>
+used skill in Adobe Photoshop and Adobe Illustrator to create images and layouts, <br>
+Worked with customers to present mockups and collect information for adjustments, <br>
+generated digital image files for use in digital and traditional printing methods, <br> Utilized knowledge of production to create high quality images, <br>
+met many times with commission clients to discuss artistic preferences and ideas  <br> <br>
 
     </div>
 
