--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body style="background-color: #FE2E64;">
+
 
     <div class="name">
 
@@ -15,23 +16,15 @@
     </div>
 
     <div class="sidebar">
-      <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
-      <a href="info.html">about</a>
       <a href="explore.html">explore</a>
       <a href="cv.html">resume</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="info.html">about</a>
       <a href="index.html">home sweet home</a>
 
 </div>
 
-<div class="indexgif">
-</div>
-
-<div class="bottomindex">
-
-  a richmond-based graphic designer, painter, illustrator, (wannabe) filmmaker, and creative-type
-
-</div>
 
 
 
