--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+<body style="background-color: #FE2E64;">
 
     <div class="name">
 
@@ -13,9 +13,8 @@
 
     </div>
 
-<img src="bbb.png">
 
-<div class="content" style="text-align: justify; top: 100px; width: 550px; left:190px; width:440px; color: #AEB404;">
+<div class="content" style="text-align: justify; top: 100px; width: 550px; left:190px; width:440px; color: white;">
 emma butterworth is a graphic designer, videographer, illustrator, painter, muralist, amateur filmmaker, image maker, wannabe wordsmith + comedien, and just generally a creative-type individual who lives and works in richmond, virginia.
 alongside her constant exploration of these various mediums, emma is full-time student in virginia commonwealth university's graphic design program and does freelance design, illustration, and videography for "read to them", a children's literacy nonprofit.
 informing her work is a desire to make immersive, emotional, impactful design and films. emma wants to produce worldview-altering works that take people's breath away--or at the very least linger with them for a moment.
@@ -39,11 +38,12 @@ feel free to reach out if you're interested in emma's design, videography, or pa
 
 
     <div class="sidebar">
-      <a href="portfolio.html">portfolio</a>
+
       <a href="links.html">links</a>
-      <a href="info.html">about</a>
       <a href="explore.html">explore</a>
       <a href="cv.html">resume</a>
+      <a href="portfolio.html">portfolio</a>
+        <a href="info.html">about</a>
       <a href="index.html">home sweet home</a>
 
 
