--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body style="background-color: #FE2E64;">
 
     <div class="name">
 
@@ -14,27 +14,27 @@
     </div>
 
     <div class="sidebar">
-      <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
-      <a href="info.html">about</a>
       <a href="explore.html">explore</a>
       <a href="cv.html">resume</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="info.html">about</a>
       <a href="index.html">home sweet home</a>
 
 
     </div>
 
-    <img src="rub.gif" style="width:35%;position:absolute; margin-left: 1070px;margin-top:2px;">
+    <img src="rub.gif" style="width:35%;position:absolute; margin-left: 1070px;">
 
     <div class="linkscontent">
-      <a href="https://twitter.com/EmmaButterwor20" class="linkscontent">twitter</a> <br>
-      <a href="https://www.instagram.com/ebutterwrth/" class="linkscontent">instagram</a> <br>
-      <a href="https://www.behance.net/ebutterworth" class="linkscontent">behance</a><br>
-      <a href="https://www.linkedin.com/in/emma-butterworth-485879185/" class="linkscontent">linkedin</a> <br>
-      <a href="https://www.pinterest.co.uk/emnbutterworth/boards/" class="linkscontent">pinterest</a> <br>
-      <a href="https://open.spotify.com/user/emnbutterworth?si=kYPx10QcSkqHW5bmWaP4kA" class="linkscontent">spotify</a> <br>
-      <a href="https://vimeo.com/user79949125" class="linkscontent">vimeo</a> <br>
-      <a href="https://e-butterworth.tumblr.com" class="linkscontent">blog</a>
+      <a href="https://twitter.com/EmmaButterwor20" style="color:white;" class="linkscontent">twitter</a> <br>
+      <a href="https://www.instagram.com/ebutterwrth/" style="color:white;" class="linkscontent">instagram</a> <br>
+      <a href="https://www.behance.net/ebutterworth" style="color:white;" class="linkscontent">behance</a><br>
+      <a href="https://www.linkedin.com/in/emma-butterworth-485879185/" style="color:white;" class="linkscontent">linkedin</a> <br>
+      <a href="https://www.pinterest.co.uk/emnbutterworth/boards/" style="color:white;" class="linkscontent">pinterest</a> <br>
+      <a href="https://open.spotify.com/user/emnbutterworth?si=kYPx10QcSkqHW5bmWaP4kA" style="color:white;" class="linkscontent">spotify</a> <br>
+      <a href="https://vimeo.com/user79949125" style="color:white;" class="linkscontent">vimeo</a> <br>
+
 
 
 
