--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body style="background-color: #FE2E64;">
 
     <div class="name">
 
@@ -14,28 +14,26 @@
     </div>
 
     <div class="sidebar">
-      <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
-      <a href="info.html">about</a>
       <a href="explore.html">explore</a>
       <a href="cv.html">resume</a>
+      <a href="portfolio.html">portfolio</a>
+      <a href="info.html">about</a>
       <a href="index.html">home sweet home</a>
 
     </div>
 
-<img src="ooo.gif" style="width:25%; margin-top:80px;margin-left:1097px; position: absolute;;">
-<img src="gum.gif" style="width:20%; margin-top:0px;margin-left:200px; position: absolute;;">
+    <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
-    <div class="linkscontent" style="margin-left:610px;">
-
-    <a href="https://ebutterworth-art.github.io/class-site/">handmade web class site</a> <br><br>
-    <a href="portraitgallery.html"> portrait gallery </a><br><br>
+    <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
+    <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
     <a href=" "> collection </a><br><br>
     <a href=" "> publications </a><br><br>
-    <a href="martens.html"> martens, a typeface </a><br><br>
+    <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href=" "> lovestory, a typeface </a><br><br>
-    <a href=" "> words </a><br><br>
-    <a href=" "> sketchbook </a><br><br>
+    <a href=" "> sketchbook </a><br><br>s
+
+    <img src="bbb.png" style="top: 0px; position: absolute; width:40%; bottom: 20px; right: 0px;">
 
 
 
