--- a/portraitgallery.html
+++ b/portraitgallery.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body style="background-color: #FE2E64;">
+
 
     <div class="name">
 
@@ -14,11 +15,11 @@
     </div>
 
     <div class="sidebar">
-      <a href="portfolio.html">portfolio</a>
       <a href="links.html">links</a>
-      <a href="info.html">about</a>
       <a href="explore.html">explore</a>
       <a href="cv.html">resume</a>
+        <a href="portfolio.html">portfolio</a>
+        <a href="info.html">about</a>
       <a href="index.html">home sweet home</a>
 
     </div>
@@ -29,8 +30,6 @@
   <img src="portraitgallery/dsd.jpg" style="height:300px;  padding: 5px;">
   <img src="portraitgallery/j copy.jpg" style="height:300px; padding: 5px;">
   <img src="portraitgallery/sfdv.jpg" style="height:300px; padding: 5px;">
-
-
   <img src="portraitgallery/ab.jpg" style="height:300px;  padding: 5px;">
   <img src="portraitgallery/abaa.jpg" style="height:300px;  padding: 5px;">
   <img src="portraitgallery/aaaaab.jpg" style="height:300px; padding: 5px;">
