--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
     </div>
 
 
-<div class="content" style="text-align: justify; top: 100px; width: 550px; left:190px; width:440px; color: white;">
+<div class="content" style="text-align: right; top: 250px; width: 550px; left:190px; width:440px; color: white;">
 emma butterworth is a graphic designer, videographer, illustrator, painter, muralist, amateur filmmaker, image maker, wannabe wordsmith + comedien, and just generally a creative-type individual who lives and works in richmond, virginia.
 alongside her constant exploration of these various mediums, emma is full-time student in virginia commonwealth university's graphic design program and does freelance design, illustration, and videography for "read to them", a children's literacy nonprofit.
 informing her work is a desire to make immersive, emotional, impactful design and films. emma wants to produce worldview-altering works that take people's breath away--or at the very least linger with them for a moment.
@@ -30,6 +30,8 @@ feel free to reach out if you're interested in emma's design, videography, or pa
   </p>
 <br>
 <br>
+
+  <img src="meme.png" style="top: 0px; position: absolute; width:200%; bottom: 20px; left: 700px;">
 
 
 
