--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,14 @@
 
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
-    <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
     <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
-    <a href=" "> collection </a><br><br>
     <a href=" "> publications </a><br><br>
+    <a href=" "> posters </a><br><br>
     <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href=" "> lovestory, a typeface </a><br><br>
-    <a href=" "> sketchbook </a><br><br>s
+    <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
+    <a href=" "> collection </a><br><br>
+    <a href=" "> sketchbook </a><br><br>
 
     <img src="bbb.png" style="top: 0px; position: absolute; width:40%; bottom: 20px; right: 0px;">
 
