--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
 </div>
 
-<img src="oop.png" style="top: 50px; right: 400px; position: absolute; width:50%;">
-
+<img src="Untitled-2-08.png" style="width:100%;">
 
   </body>
