--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     </div>
 
+    <img src="Untitled-2-08.png" style="width:80%; position:absolute;left:10px;">
+    <img src="2-01.png" style="width:60%;position:fixed;left:330px;">
+
     <div class="sidebar">
       <a href="links.html">links</a>
       <a href="explore.html">explore</a>
@@ -24,7 +27,5 @@
       <a href="index.html">home sweet home</a>
 
 </div>
-
-<img src="Untitled-2-08.png" style="width:100%;">
 
   </body>
