--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,7 @@
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
     <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
-    <a href=" "> publications </a><br><br>
-    <a href=" "> posters </a><br><br>
+    <a href=" "> truths </a><br><br>
     <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href=" "> lovestory, a typeface </a><br><br>
     <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
