--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 
 <div class="name">
 
-  emma butterworth
+  resume
 
 </div>
 
@@ -20,7 +20,7 @@
   <a href="cv.html">resume</a>
   <a href="portfolio.html">portfolio</a>
     <a href="info.html">about</a>
-  <a href="index.html">home sweet home</a>
+  <a href="index.html">home</a>
 
     </div>
 
