--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
     </div>
 
-    <img src="Untitled-2-08.png" style="width:80%; position:absolute;left:10px;">
     <img src="2-01.png" style="width:60%;position:fixed;left:330px;">
 
     <div class="sidebar">
@@ -24,7 +23,7 @@
       <a href="cv.html">resume</a>
       <a href="portfolio.html">portfolio</a>
       <a href="info.html">about</a>
-      <a href="index.html">home sweet home</a>
+      <a href="index.html">home</a>
 
 </div>
 
