--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@
 
     <div class="name">
 
-      emma butterworth
+      links
 
     </div>
 
@@ -19,12 +19,10 @@
       <a href="cv.html">resume</a>
       <a href="portfolio.html">portfolio</a>
       <a href="info.html">about</a>
-      <a href="index.html">home sweet home</a>
+      <a href="index.html">home</a>
 
 
     </div>
-
-    <img src="rub.gif" style="width:35%;position:absolute; margin-left: 1070px;">
 
     <div class="linkscontent">
       <a href="https://twitter.com/EmmaButterwor20" style="color:white;" class="linkscontent">twitter</a> <br>
