--- a/martens.html
+++ b/martens.html
@@ -19,7 +19,7 @@
       <a href="cv.html">resume</a>
       <a href="portfolio.html">portfolio</a>
       <a href="info.html">about</a>
-      <a href="index.html">home sweet home</a>
+      <a href="index.html">home</a>
 
     </div>
 
