--- a/info.html
+++ b/info.html
@@ -9,7 +9,7 @@
 
     <div class="name">
 
-      emma butterworth
+      about emma
 
     </div>
 
@@ -31,8 +31,6 @@ feel free to reach out if you're interested in emma's design, videography, or pa
 <br>
 <br>
 
-  <img src="meme.png" style="top: 0px; position: absolute; width:200%; bottom: 20px; left: 700px;">
-
 
 
     </div>
@@ -46,7 +44,7 @@ feel free to reach out if you're interested in emma's design, videography, or pa
       <a href="cv.html">resume</a>
       <a href="portfolio.html">portfolio</a>
         <a href="info.html">about</a>
-      <a href="index.html">home sweet home</a>
+      <a href="index.html">home</a>
 
 
     </div>
