--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
     <div class="name">
 
-      emma butterworth
+      portfolio
 
     </div>
 
@@ -19,7 +19,7 @@
       <a href="cv.html">resume</a>
       <a href="portfolio.html">portfolio</a>
       <a href="info.html">about</a>
-      <a href="index.html">home sweet home</a>
+      <a href="index.html">home</a>
 
     </div>
 
@@ -33,7 +33,6 @@
     <a href=" "> collection </a><br><br>
     <a href=" "> sketchbook </a><br><br>
 
-    <img src="bbb.png" style="top: 0px; position: absolute; width:40%; bottom: 20px; right: 0px;">
 
 
 
