--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #FE2E64;">
+  <body>
 
 
     <div class="name">
@@ -14,8 +14,6 @@
       emma butterworth
 
     </div>
-
-    <img src="2-01.png" style="width:60%;position:fixed;left:330px;">
 
     <div class="sidebar">
       <a href="links.html">links</a>
