--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-<body style="background-color: #FE2E64;">
+<body style="background-color: #3399CC;">
 
     <div class="name">
 
