--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #FE2E64;">
+  <body style="background-color: #FF9999;">
 
     <div class="name">
 
