--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #FE2E64;">
+  <body style="background-color: #F7EC13;">
 
     <div class="name">
 
-      portfolio
+      p o r t f o l i o
 
     </div>
 
@@ -25,13 +25,14 @@
 
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
+    <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
+    <a href=" "> collection </a><br><br>
+    <a href=" "> sketchbook </a><br><br>
     <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
     <a href=" "> truths </a><br><br>
     <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href=" "> lovestory, a typeface </a><br><br>
     <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
-    <a href=" "> collection </a><br><br>
-    <a href=" "> sketchbook </a><br><br>
 
 
 
