--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> a real piece of work </title>
+    <title> readyfireaim </title>
     <link rel="icon"href="fav.png">
     <link rel="stylesheet" href="style.css">
   </head>
