--- a/shop.html
+++ b/shop.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <title> a real piece of work </title>
-    <link rel="icon"href="fav.png">
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body style="background-color: #FE2E64;">
 
 
     <div class="name">
 
-      emma butterworth
+buy things!
 
     </div>
 
@@ -19,9 +18,82 @@
       <a href="links.html">links</a>
       <a href="explore.html">explore</a>
       <a href="cv.html">resume</a>
-      <a href="portfolio.html">portfolio</a>
-      <a href="info.html">about</a>
+        <a href="portfolio.html">portfolio</a>
+        <a href="info.html">about</a>
       <a href="index.html">home</a>
+
+    </div>
+
+<div class="pgallery">
+
+  <img src="shop/bodyprint.jpg" style="height:300px;  padding: 5px;">
+  <img src="shop/cokeprint.jpg" style="height:300px;  padding: 5px;">
+  <img src="shop/destructionprint.jpg" style="height:300px; padding: 5px;">
+  <img src="shop/Scan 20.jpeg" style="height:300px; padding: 5px;">
+  <img src="shop/Scan 19.jpeg" style="height:300px;  padding: 5px;">
+  <img src="shop/Scan 18.jpeg" style="height:300px;  padding: 5px;">
+  <img src="shop/Scan 14.jpeg" style="height:300px; padding: 5px;">
+  <img src="shop/Scan 12.jpeg" style="height:300px; padding: 5px;">
+  <img src="shop/Scan 11.jpeg" style="height:300px; padding: 5px;">
+  <img src="shop/Scan 9.jpeg" style="height:300px; padding: 5px;">
+  <img src="shop/Scan 2.jpegg" style="height:300px;  padding: 5px;">
+  <img src="shop/aa.jpg" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1 copy.jpg" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitnbmled-1-01.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1-08.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1-06.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1-04.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1-03.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1-02.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Untitled-1-01.png" style="height:300px;  padding: 5px;">
+  <img src="shop/oo-10.png" style="height:300px;  padding: 5px;">
+  <img src="shop/oo-08.png" style="height:300px;  padding: 5px;">
+  <img src="shop/oo-07.png" style="height:300px;  padding: 5px;">
+  <img src="shop/oo-06.png" style="height:300px;  padding: 5px;">
+  <img src="shop/oo-05.png" style="height:300px;  padding: 5px;">
+  <img src="shop/oo-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-18.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-17.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-16.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-13.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-12.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-08.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-06.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-05.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-04.png" style="height:300px;  padding: 5px;">
+    <img src="shop/beeep-02.png" style="height:300px;  padding: 5px;">
+    <img src="shop/YY-13.png" style="height:300px;  padding: 5px;">
+    <img src="shop/YY-12.png" style="height:300px;  padding: 5px;">
+    <img src="shop/YY-11.png" style="height:300px;  padding: 5px;">
+    <img src="shop/YY-07.png" style="height:300px;  padding: 5px;">
+    <img src="shop/YY-05.png" style="height:300px;  padding: 5px;">
+    <img src="shop/YY-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/bbeep-06.png" style="height:300px;  padding: 5px;">
+    <img src="shop/bbeep-02.png" style="height:300px;  padding: 5px;">
+    <img src="shop/bbeep-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/boobi-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/boob-02.png" style="height:300px;  padding: 5px;">
+    <img src="shop/boob-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/gvh-02.png" style="height:300px;  padding: 5px;">
+    <img src="shop/truthsw-07.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truthsw-06.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truthsw-04.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truthsw-03.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truthsw-02.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truthsw-01.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-24.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-14.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-15.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-12.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-11.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-09.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-07.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-05.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-04.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-03.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-01.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/truths-02.jpg" style="height:300px;  padding: 5px;">
+
 
 </div>
 
