--- a/explore10a.html
+++ b/explore10a.html
@@ -16,7 +16,7 @@
 
     </div>
 
-    <img src="not.jpeg" style="width:100%;">
+    <img src="Screen Shot 2021-01-25 at 9.20.43 PM" style="width:100%;">
 
 
     <div class="next">
