--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="sidebar">
       <a href="links.html">links</a>
       <a href="explore.html">explore</a>
-      <a href="cv.html">resume</a>
-      <a href="portfolio.html">portfolio</a>
-      <a href="info.html">about</a>
+      <a href="shop.html">shop</a>
+        <a href="portfolio.html">portfolio</a>
+        <a href="info.html">about</a>
       <a href="index.html">home</a>
 
 </div>
