--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@ buy things!
     <div class="sidebar">
       <a href="links.html">links</a>
       <a href="explore.html">explore</a>
-      <a href="cv.html">resume</a>
+      <a href="shop.html">shop</a>
         <a href="portfolio.html">portfolio</a>
         <a href="info.html">about</a>
       <a href="index.html">home</a>
@@ -49,31 +49,31 @@ buy things!
   <img src="shop/oo-10.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-08.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-07.png" style="height:300px;  padding: 5px;">
-  <img src="shop/oo-06.png" style="height:300px;  padding: 5px;">
+  <img src="shop/Screen Shot 2021-01-25 at 9.13.20 PM" style="height:300px;  padding: 5px;">
   <img src="shop/oo-05.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-01.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-18.png" style="height:300px;  padding: 5px;">
-    <img src="shop/beeep-17.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.14.28 PM" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-16.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-13.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-12.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-08.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-06.png" style="height:300px;  padding: 5px;">
-    <img src="shop/beeep-05.png" style="height:300px;  padding: 5px;">
-    <img src="shop/beeep-04.png" style="height:300px;  padding: 5px;">
-    <img src="shop/beeep-02.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.15.22 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.16.15 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.17.38 PM" style="height:300px;  padding: 5px;">
     <img src="shop/YY-13.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-12.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-11.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-07.png" style="height:300px;  padding: 5px;">
-    <img src="shop/YY-05.png" style="height:300px;  padding: 5px;">
-    <img src="shop/YY-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.18.36 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.19.36 PM" style="height:300px;  padding: 5px;">
     <img src="shop/bbeep-06.png" style="height:300px;  padding: 5px;">
     <img src="shop/bbeep-02.png" style="height:300px;  padding: 5px;">
     <img src="shop/bbeep-01.png" style="height:300px;  padding: 5px;">
     <img src="shop/boobi-01.png" style="height:300px;  padding: 5px;">
     <img src="shop/boob-02.png" style="height:300px;  padding: 5px;">
-    <img src="shop/boob-01.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.20.43 PM" style="height:300px;  padding: 5px;">
     <img src="shop/gvh-02.png" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-07.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-06.jpg" style="height:300px;  padding: 5px;">
@@ -81,7 +81,7 @@ buy things!
     <img src="shop/truthsw-03.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-02.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-01.jpg" style="height:300px;  padding: 5px;">
-    <img src="shop/truths-24.jpg" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.21.45 PM" style="height:300px;  padding: 5px;">
     <img src="shop/truths-14.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truths-15.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truths-12.jpg" style="height:300px;  padding: 5px;">
