--- a/portfolio.html
+++ b/portfolio.html
@@ -16,15 +16,16 @@
     <div class="sidebar">
       <a href="links.html">links</a>
       <a href="explore.html">explore</a>
-      <a href="cv.html">resume</a>
-      <a href="portfolio.html">portfolio</a>
-      <a href="info.html">about</a>
+      <a href="shop.html">shop</a>
+        <a href="portfolio.html">portfolio</a>
+        <a href="info.html">about</a>
       <a href="index.html">home</a>
 
     </div>
 
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
+    <a href="cv.html"> resume </a><br><br>
     <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
     <a href=" "> collection </a><br><br>
     <a href=" "> sketchbook </a><br><br>
@@ -33,7 +34,6 @@
     <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href=" "> lovestory, a typeface </a><br><br>
     <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
-
 
 
 
