Updates to index and shop

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     </div>
 
+    <img src="shop/destructionprint.jpg" style="height:2000px; right:300px;">
+
+
     <div class="sidebar">
       <a href="links.html">links</a>
       <a href="explore.html">explore</a>
