--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@ prints 4 sale
   <img src="shop/Scan 12.jpeg" style="height:300px; padding: 5px;">
   <img src="shop/Scan 11.jpeg" style="height:300px; padding: 5px;">
   <img src="shop/Scan 9.jpeg" style="height:300px; padding: 5px;">
-  <img src="shop/Scan 2.jpegg" style="height:300px;  padding: 5px;">
+  <img src="shop/Scan 2.jpeg" style="height:300px;  padding: 5px;">
   <img src="shop/aa.jpg" style="height:300px;  padding: 5px;">
   <img src="shop/Untitled-1 copy.jpg" style="height:300px;  padding: 5px;">
   <img src="shop/Untitnbmled-1-01.png" style="height:300px;  padding: 5px;">
@@ -49,31 +49,31 @@ prints 4 sale
   <img src="shop/oo-10.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-08.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-07.png" style="height:300px;  padding: 5px;">
-  <img src="shop/Screen Shot 2021-01-25 at 9.13.20 PM" style="height:300px;  padding: 5px;">
+  <img src="shop/Screen Shot 2021-01-25 at 9.13.20 PM.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-05.png" style="height:300px;  padding: 5px;">
   <img src="shop/oo-01.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-18.png" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.14.28 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.14.28 PM.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-16.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-13.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-12.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-08.png" style="height:300px;  padding: 5px;">
     <img src="shop/beeep-06.png" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.15.22 PM" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.16.15 PM" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.17.38 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.15.22 PM.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.16.15 PM.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.17.38 PM.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-13.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-12.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-11.png" style="height:300px;  padding: 5px;">
     <img src="shop/YY-07.png" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.18.36 PM" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.19.36 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.18.36 PM.png" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.19.36 PM.png" style="height:300px;  padding: 5px;">
     <img src="shop/bbeep-06.png" style="height:300px;  padding: 5px;">
     <img src="shop/bbeep-02.png" style="height:300px;  padding: 5px;">
     <img src="shop/bbeep-01.png" style="height:300px;  padding: 5px;">
     <img src="shop/boobi-01.png" style="height:300px;  padding: 5px;">
     <img src="shop/boob-02.png" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.20.43 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.20.43 PM.png" style="height:300px;  padding: 5px;">
     <img src="shop/gvh-02.png" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-07.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-06.jpg" style="height:300px;  padding: 5px;">
@@ -81,7 +81,7 @@ prints 4 sale
     <img src="shop/truthsw-03.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-02.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truthsw-01.jpg" style="height:300px;  padding: 5px;">
-    <img src="shop/Screen Shot 2021-01-25 at 9.21.45 PM" style="height:300px;  padding: 5px;">
+    <img src="shop/Screen Shot 2021-01-25 at 9.21.45 PM.png" style="height:300px;  padding: 5px;">
     <img src="shop/truths-14.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truths-15.jpg" style="height:300px;  padding: 5px;">
     <img src="shop/truths-12.jpg" style="height:300px;  padding: 5px;">
