--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
 
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
+    <a href="craftsmanswife.html"> collection </a><br><br>
     <a href="cv.html"> resume </a><br><br>
     <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
-    <a href=" "> collection </a><br><br>
     <a href=" "> sketchbook </a><br><br>
     <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
     <a href=" "> truths </a><br><br>
