--- a/craftsmanswife.html
+++ b/craftsmanswife.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #F7EC13;">
 
-    <div class="name">
+    <div class="name" style="left:550px;">
 
   THE craftsman's WIFE
 
