--- a/info.html
+++ b/info.html
@@ -7,9 +7,9 @@
 
 <body style="background-color: #3399CC;">
 
-    <div class="name">
+    <div class="name" style="left:600px;">
 
-      about emma
+      ABOUT EMMA
 
     </div>
 
