Updated pages and content

--- a/links.html
+++ b/links.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #FF9999;">
 
-    <div class="name">
+    <div class="name" style="height:2000px; right:300px;">
 
       links
 
