--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #F7EC13;">
 
-    <div class="name">
+    <div class="name" style="height:2000px; right:300px;">
 
       PORTFOLIO
 
@@ -25,6 +25,7 @@
 
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
+    <a href="port.html"> portfolio selected works </a><br><br>
     <a href="craftsmanswife.html"> the craftsmans wife </a><br><br>
     <a href="cv.html"> resume </a><br><br>
     <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
