--- a/portraitgallery.html
+++ b/portraitgallery.html
@@ -8,7 +8,7 @@
   <body style="background-color: #FE2E64;">
 
 
-    <div class="name">
+    <div class="name" style="height:2000px; right:300px;">
 
 portrait gallery
     </div>
