--- a/shop.html
+++ b/shop.html
@@ -8,9 +8,9 @@
   <body style="background-color: #FE2E64;">
 
 
-    <div class="name">
+    <div class="name" style="height:2000px; right:300px;">
 
-prints 4 sale
+4 sale
 
     </div>
 
