--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,9 @@
 
   <body style="background-color: #F7EC13;">
 
-    <div class="name" style="height:2000px; right:300px;">
+    <div class="name" style="height:2000px; left: 740px;">
 
-      PORTFOLIO
+      WORK
 
     </div>
 
