--- a/portfolio.html
+++ b/portfolio.html
@@ -25,15 +25,13 @@
 
     <div style=" font-size: 30px;text-align: center; margin-top: 200px;">
 
-    <a href="port.html"> portfolio selected works </a><br><br>
-    <a href="craftsmanswife.html"> the craftsmans wife </a><br><br>
-    <a href="cv.html"> resume </a><br><br>
+    <a href="port.html"style="color:white;"> portfolio selected works </a><br><br>
+    <a href="craftsmanswife.html"style="color:white;"> the craftsmans wife </a><br><br>
+    <a href="cv.html"style="color:white;"> resume </a><br><br>
     <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
     <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
     <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
-
-
 
 
 
