--- a/port.html
+++ b/port.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #F7EC13;">
 
-    <div class="name" style="height:2000px; right:300px;">
+    <div class="name" style="height:2000px; left:700px;">
 
       PORTFOLIO
 
