UPDATED CRAFTSMANS WIFE

--- a/craftsmanswife.html
+++ b/craftsmanswife.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #F7EC13;">
+  <body style="background-color: #FE2E64;">
 
-    <div class="name" style="left:550px;">
+    <div class="name" style="left:300px;">
 
-  THE craftsman's WIFE
+  VCU GDES PROGRAM SENIOR THESIS
 
     </div>
 
@@ -22,6 +22,17 @@
       <a href="index.html">home</a>
 
     </div>
+
+    <div>
+
+      <img src="CW-TITLE.png" style="width:100%;">
+
+
+
+
+
+    </div>
+
 
 
   </body>
