--- a/cwartists.html
+++ b/cwartists.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #FE2E64;">
 
-    <div class="name" style="left:300px;">
+    <div style="font-size: 70px; margin-top: 100px; margin-left: 10%;">
 
   VCU GDES PROGRAM SENIOR THESIS
 
@@ -23,22 +23,11 @@
 
     </div>
 
-    <div>
+<div style=" font-size: 70px;">
 
-      <img src="CW-TITLE.png" style="width:100%;">
-
-
-<div style=" font-size: 200px; text-align: right;">
-
-  <a href="cwartists.html"> FEATURED ARTISTS </a> <br>
-  <a href="cwmywork.html"> MY WORK</a><br>
-<a href="cwarchive.html"> ARCHIVE </a><br>
-<a href="cwscript.html"> SCRIPT </a><br>
-
-</div>
-
-
-
+  <a href="cwmywork.html"> MY WORK</a>
+<a href="cwarchive.html"> ARCHIVE </a>
+<a href="cwscript.html"> SCRIPT </a>
 
 
   </body>
