--- a/cwscript.html
+++ b/cwscript.html
@@ -23,22 +23,11 @@
 
     </div>
 
-    <div>
+<div style=" font-size: 70px;">
 
-      <img src="CW-TITLE.png" style="width:100%;">
-
-
-<div style=" font-size: 200px; text-align: right;">
-
-  <a href="cwartists.html"> FEATURED ARTISTS </a> <br>
-  <a href="cwmywork.html"> MY WORK</a><br>
-<a href="cwarchive.html"> ARCHIVE </a><br>
-<a href="cwscript.html"> SCRIPT </a><br>
-
-</div>
-
-
-
+  <a href="cwartists.html"> FEATURED ARTISTS </a>
+  <a href="cwmywork.html"> MY WORK</a>
+<a href="cwarchive.html"> ARCHIVE </a>
 
 
   </body>
