--- a/cwarchive.html
+++ b/cwarchive.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #FE2E64;">
 
-    <div class="name" style="left:250px;">
+    <div class="name" style="left:300px;">
 
   VCU GDES PROGRAM SENIOR THESIS
 
@@ -24,7 +24,7 @@
     </div>
 
 
-<div style="font-size: 70px; margin-top: 100px; margin-left: 10%;">
+<div style="font-size: 70px; margin-top: 100px; margin-left: 220px;">
 
   <a href="cwartists.html"> FEATURED ARTISTS </a>
   <a href="cwmywork.html"> MY WORK</a>
@@ -32,7 +32,7 @@
 
 </div>
 
-<div class="linkscontent">
+<div class="linkscontent" style="margin-top:130px;">
 
   <div style="text-align: left; font-family: serif; font-style: italic; font-size: 70px;  margin-left: 10%;">
 
