--- a/cwartists.html
+++ b/cwartists.html
@@ -7,7 +7,7 @@
 
   <body style="background-color: #FE2E64;">
 
-    <div style="font-size: 70px; margin-top: 100px; margin-left: 10%;">
+    <div class="name" style="left:300px;">
 
   VCU GDES PROGRAM SENIOR THESIS
 
@@ -23,7 +23,7 @@
 
     </div>
 
-<div style=" font-size: 70px;">
+    <div style="font-size: 70px; margin-top: 100px; margin-left: 380px;">
 
   <a href="cwmywork.html"> MY WORK</a>
 <a href="cwarchive.html"> ARCHIVE </a>
