--- a/cwscript.html
+++ b/cwscript.html
@@ -23,7 +23,7 @@
 
     </div>
 
-<div style=" font-size: 70px;">
+    <div style="font-size: 70px; margin-top: 100px; margin-left: 180px;">
 
   <a href="cwartists.html"> FEATURED ARTISTS </a>
   <a href="cwmywork.html"> MY WORK</a>
