--- a/cwartists.html
+++ b/cwartists.html
@@ -25,9 +25,10 @@
 
     <div style="font-size: 70px; margin-top: 100px; margin-left: 380px;">
 
+<a href="cwoverview.html"> OVERVIEW </a>
   <a href="cwmywork.html"> MY WORK</a>
 <a href="cwarchive.html"> ARCHIVE </a>
-<a href="cwscript.html"> SCRIPT </a>
 
+</div>
 
   </body>
