--- a/cwarchive.html
+++ b/cwarchive.html
@@ -26,9 +26,9 @@
 
 <div style="font-size: 70px; margin-top: 100px; margin-left: 220px;">
 
+<a href="cwoverview.html"> OVERVIEW </a>
   <a href="cwartists.html"> FEATURED ARTISTS </a>
   <a href="cwmywork.html"> MY WORK</a>
-<a href="cwscript.html"> SCRIPT </a>
 
 </div>
 
