--- a/cwlist.html
+++ b/cwlist.html
@@ -23,13 +23,12 @@
 
     </div>
 
-<div style="font-size: 70px; margin-top: 100px; margin-left: 230px;">
+    <div style="font-size: 70px; margin-top: 100px; margin-left: 180px;">
 
-<a href="cwoverview.html"> OVERVIEW </a>
   <a href="cwartists.html"> FEATURED ARTISTS </a>
+  <a href="cwmywork.html"> MY WORK</a>
 <a href="cwarchive.html"> ARCHIVE </a>
 
-
-</div>
+</DIV>
 
   </body>
