--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,6 @@
 
     <div class="sidebar">
       <a href="links.html">links</a>
-      <a href="explore.html">explore</a>
       <a href="shop.html">shop</a>
         <a href="portfolio.html">portfolio</a>
         <a href="info.html">about</a>
@@ -26,7 +25,7 @@
     <div style="font-size: 30px;text-align: center; margin-top: 200px;">
 
     <a href="port.html"style="color:white;"> portfolio selected works </a><br><br>
-    <a href="craftsmanswife.html"style="color:white;"> the craftsmans wife </a><br><br>
+    <a href="https://thecraftswife.cargo.site"style="color:white;"> the craftsmans wife </a><br><br>
     <a href="cv.html"style="color:white;"> resume </a><br><br>
     <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
     <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
