--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #ED2024;">
+  <body style="background-color: #ef3c23;">
 
 
 <div class="name" style="left:750px;">
