--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #FF9999;">
+  <body style="background-color: #ff3300;">
 
     <div class="name" style="height:2000px; right:300px;">
 
