--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #FE2E64;">
+  <body style="background-color: #ff3300;">
 
 
     <div class="name" style="height:2000px; right:300px;">
@@ -16,7 +16,6 @@
 
     <div class="sidebar">
       <a href="links.html">links</a>
-      <a href="explore.html">explore</a>
       <a href="shop.html">shop</a>
         <a href="portfolio.html">portfolio</a>
         <a href="info.html">about</a>
