--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-<body style="background-color: #3399CC;">
+<body style="background-color: #ff3300;">
 
     <div class="name" style="left:600px;">
 
