--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #F7EC13;">
+  <body style="background-color: #ff3300;">
 
     <div class="name" style="height:2000px; left: 740px;">
 
@@ -28,7 +28,6 @@
     <a href="https://thecraftswife.cargo.site"style="color:white;"> the craftsmans wife </a><br><br>
     <a href="cv.html"style="color:white;"> resume </a><br><br>
     <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
-    <a href="portraitgallery.html" style="color:white;"> portrait gallery </a><br><br>
     <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
     <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
 
