--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <body>
 
 
-    <div class="name" style="left:600px; top:460px;">
+    <div class="name" style="left:600px; top:0px;">
 
       emma butterworth
 
     </div>
 
-    <img src="shop/destructionprint.jpg" style="height:2000px; right:300px;">
+    <img src="Untitled-1-02.gif" style="height: 600px; left:300px; top:240px; position:fixed;">
+
+    <img src="1.jpg" style="width:100%; right:300px;">
 
 
     <div class="sidebar">
