Edited pages and content

--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
   </head>
 
   <body style="background-color: #ff3300;">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div class="name" style="left:750px;">
 
