--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+<body style="background-color: #ff3300;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-    <div class="name" style="left:600px; top:0px;">
+    <div class="name" style="left:15px; top:0px;">
 
       emma butterworth
 
