--- a/info.html
+++ b/info.html
@@ -5,27 +5,40 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-<body style="background-color: #ff3300;">
+<body style="background-color: #FFC3A7;">
 
-    <div class="name" style="left:600px;">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <div class="name" style="left:0px;">
 
       ABOUT EMMA
 
     </div>
 
+    <img src="Untitled-1-02.gif" style="height: 200px; right:0px; top:700px; position:fixed;">
 
-<div class="content" style="text-align: right; top: 250px; width: 550px; left:150px; width:440px; color: white;">
-emma butterworth is a graphic designer, videographer, illustrator, painter, muralist, amateur filmmaker, image maker, wannabe wordsmith + comedien, and just generally a creative-type individual who lives and works in richmond, virginia.
-alongside her constant exploration of these various mediums, emma is full-time student in virginia commonwealth university's graphic design program and does freelance design, illustration, and videography for "read to them", a children's literacy nonprofit.
-informing her work is a desire to make immersive, emotional, impactful design and films. emma wants to produce worldview-altering works that take people's breath away--or at the very least linger with them for a moment.
-she don't take herself too seriously, and neither does her work, despite caring enormously. overall, emma would like to make work that actually does something.
 
-feel free to reach out if you're interested in emma's design, videography, or painting services.
+
+<div class="content" style="text-align: left; top: 150px; left:150px; width:500px; color: white;">
+
+<div style="font-style:italic; font-weight:bolder; text-align:left;">
+
+Emma Nicole Butterworth <br>
+
+BFA in Graphic Design Magna Cum Laude <br>from Virginia Commonwealth University's <br> School of the Arts
+<br> emnbutterworth@gmail.com <br>
+434.305.4904 <br>
+@ebutterwrth on instagram
+</div>
+
+<br> <br>
+Hi! I'm a graphic designer, videographer, illustrator, painter, muralist, amateur filmmaker, image maker, wannabe wordsmith + comedien, and just generally a creative-type individual who lives and works in Richmond, Virginia.
+Since graduating, I've been building my own small business and brand, searching and applying for jobs, and doing freelance design, illustration, and videography for Read to Them, a children's literacy nonprofit.
+I'm a uniquely determined, empathetic, and conscientious person and these characteristics are fundamental to my creative practice. When I set myself to something, I make it happen. I pride myself in my efforts to master a number of areas, as well as constantly learn from my peers and surroundings. My goals in pursuing a career in design are twofold: to create a bridge between modern-day design and art history and other artforms/media, and to produce work that prioritizes the individual and the human experience. I'm available to discuss job opportunities, collaborations, and possible commissions (branding, logos, painting, prints, videography, photography, and more!).
+<br><br>
 <br>
-<p style="text-align:right;">
-    C O N T A C T <br>
-    emnbutterworth@gmail.com <br>
-    434.305.4904
+
+  </div>
 
   </p>
 <br>
@@ -33,7 +46,7 @@ feel free to reach out if you're interested in emma's design, videography, or pa
 
 
 
-    </div>
+
 
 
 
