--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
 
   <body style="background-color: #ff3300;">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <div class="name" style="height:2000px; left: 740px;">
 
       WORK
@@ -22,17 +24,5 @@
 
     </div>
 
-    <div style="font-size: 30px;text-align: center; margin-top: 200px;">
-
-    <a href="port.html"style="color:white;"> portfolio selected works </a><br><br>
-    <a href="https://thecraftswife.cargo.site"style="color:white;"> the craftsmans wife </a><br><br>
-    <a href="cv.html"style="color:white;"> resume </a><br><br>
-    <a href="readyfireaim.html" style="color:white;"> readyfireaim </a><br><br>
-    <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
-    <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white;">handmade web class site</a> <br><br>
-
-
-
-    </div>
 
   </body>
