--- a/links.html
+++ b/links.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #ff3300;">
+  <body style="background-color: #E9DF14;">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <div class="name" style="height:2000px; right:300px;">
 
@@ -23,14 +25,17 @@
 
     </div>
 
-    <div class="linkscontent">
-      <a href="https://twitter.com/EmmaButterwor20" style="color:white;" class="linkscontent">twitter</a> <br>
-      <a href="https://www.instagram.com/ebutterwrth/" style="color:white;" class="linkscontent">instagram</a> <br>
-      <a href="https://www.behance.net/ebutterworth" style="color:white;" class="linkscontent">behance</a><br>
-      <a href="https://www.linkedin.com/in/emma-butterworth-485879185/" style="color:white;" class="linkscontent">linkedin</a> <br>
-      <a href="https://www.pinterest.co.uk/emnbutterworth/boards/" style="color:white;" class="linkscontent">pinterest</a> <br>
-      <a href="https://open.spotify.com/user/emnbutterworth?si=kYPx10QcSkqHW5bmWaP4kA" style="color:white;" class="linkscontent">spotify</a> <br>
-      <a href="https://vimeo.com/user79949125" style="color:white;" class="linkscontent">vimeo</a> <br>
+    <div class="sidebar" style="left:660px; position: relative; ">
+      <a href="https://thecraftswife.cargo.site"style="color:white;"> the craftsmans wife </a><br><br>
+      <a href="cv.html"style="color:white;"> resume </a><br><br>
+      <a href="martens.html" style="color:white;"> martens, a typeface </a><br><br>
+      <a href="https://ebutterworth-art.github.io/class-site/"  style="color:white">handmade web class site</a> <br><br>
+      <a href="https://www.instagram.com/ebutterwrth/" style="color:white;">instagram</a> <br><br>
+      <a href="https://www.behance.net/ebutterworth" style="color:white;">behance</a><br><br>
+      <a href="https://www.linkedin.com/in/emma-butterworth-485879185/" style="color:white;">linkedin</a> <br><br>
+      <a href="https://www.pinterest.co.uk/emnbutterworth/boards/" style="color:white;">pinterest</a> <br><br>
+      <a href="https://open.spotify.com/user/emnbutterworth?si=kYPx10QcSkqHW5bmWaP4kA" style="color:white;">spotify</a> <br><br>
+      <a href="https://vimeo.com/user79949125" style="color:white;">vimeo</a> <br>
 
 
 
