--- a/martens.html
+++ b/martens.html
@@ -7,6 +7,8 @@
 
   <body>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <div class="name" style="height:2000px; right:300px;">
 
       martens
