--- a/shop.html
+++ b/shop.html
@@ -5,14 +5,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #ff3300;">
+  <body style="background-color: #B0DCF9 ;">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <div class="name" style="height:2000px; right:300px;">
+    <div class="name" style="height:200px; left:0px;">
 
-4 sale
+BUY SOMETHING COOL
 
     </div>
+
+    <img src="Untitled-1-02.gif" style="height: 200px; right:0px; top:700px; position:fixed;">
+
 
     <div class="sidebar">
       <a href="links.html">links</a>
@@ -23,20 +27,27 @@
 
     </div>
 
+
+</div>
+
 <div class="pgallery">
 
-  <img src="babe.jpg" style="height:600px;  padding: 5px;">
-  <img src="babecakes.jpg" style="height:600px;  padding: 5px;">
-  <img src="grief.jpg" style="height:600px; padding: 5px;">
-  <img src="girlliee.jpg" style="height:600px; padding: 5px;">
-  <img src="boddyimage.jpg" style="height:600px;  padding: 5px;">
-  <img src="grammy.jpg" style="height:600px;  padding: 5px;">
-  <img src="destruct.jpg" style="height:600px; padding: 5px;">
-  <img src="dance.jpg" style="height:600px; padding: 5px;">
-  <img src="originality.jpg" style="height:600px; padding: 5px;">
-  <img src="king.jpg" style="height:600px; padding: 5px;">
-  <img src="swell.jpg" style="height:600px;  padding: 5px;">
-  <img src="bride.jpg" style="height:600px;  padding: 5px;">
+  <div style="font-family: sans-serif; font-weight: bolder; font-size:15px; color:#FF0061; "> All featured works are available in print format, <br> paintings are available in both their original form and print. <br> Contact for pricing at emnbutterworth@gmail.com or <br> @ebutterwrth on Instagram
+<br>
+<br>
+<br>
+  <img src="babe.jpg" style="width:50%;  left:20%; padding: 5px;">
+  <img src="babecakes.jpg" style="width:50%;  padding: 5px;">
+  <img src="grief.jpg" style="width:50%; padding: 5px;">
+  <img src="girlliee.jpg" style="width:50%; padding: 5px;">
+  <img src="boddyimage.jpg" style="width:50%;  padding: 5px;">
+  <img src="grammy.jpg" style="width:50%;  padding: 5px;">
+  <img src="destruct.jpg" style="width:50%; padding: 5px;">
+  <img src="dance.jpg" style="width:50%; padding: 5px;">
+  <img src="originality.jpg" style="width:50%; padding: 5px;">
+  <img src="king.jpg" style="width:50%; padding: 5px;">
+  <img src="swell.jpg" style="width:50%;  padding: 5px;">
+  <img src="bride.jpg" style="width:50%;  padding: 5px;">
 
 
 
